# meeting-countdown

./: .gitignore  README.md  app.py  countdown.py  pyproject.toml
tests/: test_countdown.py
